--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -59,20 +59,26 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:1.3.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
     implementation 'androidx.compose.material:material:1.3.0'
     implementation 'androidx.datastore:datastore-core:1.0.0'
     implementation 'com.google.android.gms:play-services-tagmanager-v4-impl:18.0.2'
+    implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout-core:1.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0"
 
 
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     // Room
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
@@ -98,7 +104,7 @@ dependencies {
     //Datastore Preferences
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     //Navigation
-    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha02'
+    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha03'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
