--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Permission declare that our app use alarm service and system can cancel the alarm -->
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-
+    <!-- <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" /> -->
     <!-- Permission declare that our app is alarm app and system can not cancel the alarm -->
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
-
-
-
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:name=".SamaiBaseActivity"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/stopwatch"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/stopwatch"
         android:supportsRtl="true"
         android:theme="@style/Theme.Samai"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Samai"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.screen.splash.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.Samai">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,11 +39,12 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <receiver
             android:name=".ui.screen.alarm.AlarmReceiver"
             android:directBootAware="true"
             android:exported="false"
-            android:process=".AlarmReceiverVelox"/>
+            android:process=".AlarmReceiverVelox" />
     </application>
 
 </manifest>
