--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Permission declare that our app use alarm service and system can cancel the alarm -->
     <!-- <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" /> -->
     <!-- Permission declare that our app is alarm app and system can not cancel the alarm -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".SamaiBaseActivity"
@@ -17,6 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Samai"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.Samai"
@@ -25,6 +30,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".ui.screen.splash.SplashScreenActivity"
             android:exported="true"
